fix a race condition blurring cells preventing button click events

--- a/assets/css/niex.scss
+++ b/assets/css/niex.scss
@@ -64,8 +64,9 @@
       width: 100%;
     }
 
-      .cell {
+    .cell {
       position: relative;
+      tab-index: 1;
     }
 
     .cell button {
