--- a/priv/static/css/app.css
+++ b/priv/static/css/app.css
@@ -226,7 +226,8 @@ header nav a {
     border-radius: 4px;
     width: 100%; }
   .niex .niex-body .cell {
-    position: relative; }
+    position: relative;
+    tab-index: 1; }
   .niex .niex-body .cell button {
     color: #333333; }
   .niex .niex-body .cell .cell-row {
